fix: include README.md in chart package for Artifact Hub
Remove *.md exclusion from .helmignore to ensure README.md
is packaged with the chart and visible on Artifact Hub.

--- a/charts/globalping/.helmignore
+++ b/charts/globalping/.helmignore
@@ -26,9 +26,8 @@
 .circleci/
 .travis.yml
 .gitlab-ci.yml
-# Documentation (but keep README.md)
-*.md
-!README.md
+# Documentation
+# *.md excluded - but we want README.md in the package for Artifact Hub
 # Test files
 test/
 tests/
