--- a/charts/globalping/Chart.yaml
+++ b/charts/globalping/Chart.yaml
@@ -3,7 +3,7 @@ name: globalping
 description: Helm chart for deploying the Globalping probe on Kubernetes
 type: application
 version: 1.0.5
-appVersion: "1.0.5"
+appVersion: "latest"
 keywords:
   - globalping
   - probe
