--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }} --check-version-increment=false
+        run: ct install --target-branch ${{ github.event.repository.default_branch }}
 
       - name: Test template rendering
         run: |
