--- a/charts/globalping/Chart.yaml
+++ b/charts/globalping/Chart.yaml
@@ -33,6 +33,8 @@ annotations:
   artifacthub.io/changes: |
     - kind: fixed
       description: Fixed probe health checks to work with minimal container images by replacing pgrep with /proc filesystem checks
+    - kind: fixed
+      description: Fixed NetworkPolicy egress rule for ICMP traffic (Kubernetes doesn't support ICMP protocol in NetworkPolicy spec)
     - kind: added
       description: Made liveness and readiness probe commands configurable via values.yaml
   artifacthub.io/links: |
