--- a/charts/globalping/Chart.yaml
+++ b/charts/globalping/Chart.yaml
@@ -31,18 +31,12 @@ annotations:
   artifacthub.io/prerelease: "false"
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |
-    - kind: changed
-      description: Simplified workloads while keeping deployment, persistence, and network policy options
-    - kind: changed
-      description: Shared pod spec logic between DaemonSet and Deployment manifests
     - kind: fixed
-      description: Fixed helm lint issues with .helmignore negation pattern and template includes
+      description: Fixed probe health checks to work with minimal container images by replacing pgrep with /proc filesystem checks
     - kind: fixed
-      description: Fixed NOTES.txt type comparison for replicaCount
+      description: Fixed NetworkPolicy egress rule for ICMP traffic (Kubernetes doesn't support ICMP protocol in NetworkPolicy spec)
     - kind: added
-      description: Added comprehensive CI/CD workflows for testing and releasing
-    - kind: added
-      description: Added ICMP egress rule to NetworkPolicy for ping/traceroute support
+      description: Made liveness and readiness probe commands configurable via values.yaml
   artifacthub.io/links: |
     - name: Documentation
       url: https://github.com/jsdelivr/globalping
@@ -58,4 +52,3 @@ annotations:
   artifacthub.io/operator: "false"
   # Kubernetes version requirements
   artifacthub.io/kubeVersion: ">=1.19.0-0"
-
