--- a/charts/globalping/values.yaml
+++ b/charts/globalping/values.yaml
@@ -79,11 +79,10 @@ networkPolicy:
       ports:
         - protocol: UDP
           port: 53
-    # Allow ICMP for ping/traceroute measurements
+    # Allow all protocols (including ICMP) for measurements
+    # Note: NetworkPolicy doesn't support ICMP protocol, so we allow all traffic
     - to:
         - namespaceSelector: {}
-      ports:
-        - protocol: ICMP
 
 livenessProbe:
   enabled: true
@@ -92,6 +91,11 @@ livenessProbe:
   timeoutSeconds: 10
   successThreshold: 1
   failureThreshold: 3
+  exec:
+    command:
+      - sh
+      - -c
+      - "grep -q node /proc/*/comm 2>/dev/null || exit 1"
 
 readinessProbe:
   enabled: true
@@ -100,10 +104,14 @@ readinessProbe:
   timeoutSeconds: 5
   successThreshold: 1
   failureThreshold: 3
+  exec:
+    command:
+      - sh
+      - -c
+      - "grep -q node /proc/*/comm 2>/dev/null || exit 1"
 
 updateStrategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
     maxSurge: 1
-
